syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message DeleteRealEstateValuationRequest {
    int64 CaseId = 1;
    int32 RealEstateValuationId = 2;
}